# JoyTinySoftRenderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  Main.cpp
SoftRenderer/: CMakeLists.txt
SoftRenderer/Core/: Camera.cpp  Camera.h
SoftRenderer/Math/: Mat.h  Vec.h
Tests/: CMakeLists.txt
Tests/MathTest/: MathTest.cpp  VecTest.cpp
src/: Main.cpp
src/math/: Mat.h  Mat.hpp  Vec.cpp  Vec.h
